--- a/style/main.css
+++ b/style/main.css
@@ -1,160 +1,14 @@
-header {
-    display: flex;
-    justify-content: space-between;
-    position: sticky;
-
-    .menu {
-        display: flex;
-        width: 648px;
-        justify-content: space-between;
-        user-select: none;
-
-        li {
-            display: block;
-            font-size: 13px;
-            line-height: 18px;
-            color: #FFFFFF;
-        }
-    }
+#intro {
+    padding: 20px;
 }
 
-#toggler {
-    display: none;
-}
+h1 {
+    font-size: 42px;
+    font-weight: normal;
+    letter-spacing: 4px;
+    line-height: 52px;
+    color: #FFFFFF;
+    text-align: left;
+    vertical-align: top;
 
-.menubutton {
-    .top {
-        display: block;
-    }
-
-    .bottom {
-        display: block;
-    }
-}
-
-@media (min-width: 900px) {
-    header {
-        padding: 20px 72px;
-
-        #arrow {
-            position: fixed;
-            display: none;
-        }
-
-        .menubutton {
-            width: 18px;
-            height: 18px;
-            position: fixed;
-            display: none;
-        }
-
-        .menu {
-            li {
-                letter-spacing: 2px;
-            }
-        }
-    }
-}
-
-@media (max-width: 900px) {
-    header {
-        padding: 20px;
-
-        #arrow {
-            position: fixed;
-            display: none;
-        }
-
-        .menubutton {
-            width: 18px;
-            height: 18px;
-            position: fixed;
-            display: none;
-        }
-    }
-}
-
-@media (max-width: 500px) {
-    #toggler:checked~.menu {
-        transform: scaleY(1);
-        opacity: 1;
-        transition: all .8s cubic-bezier(1, 0, 0, 1) 0ms;
-        transform-origin: center 0px;
-        z-index: 6;
-    }
-
-    header {
-        padding: 20px;
-
-        .menubutton {
-            width: 18px;
-            height: 18px;
-            position: relative;
-            display: block;
-            overflow: visible;
-
-            .top {
-                transition: all .3s ease-in-out;
-                transform: rotate(0deg);
-                translate: 0px 0px;
-            }
-
-            .bottom {
-                transition: all .3s ease-in-out;
-                transform: rotate(0deg);
-                translate: 0px 0px;
-            }
-        }
-
-        #toggler:checked+label .menubutton {
-            .top {
-                transition: all .3s ease-in-out;
-                transform: rotate(45deg) scaleX(1.25);
-                translate: 5.5px -3px;
-            }
-
-            .bottom {
-                transition: all .3s ease-in-out;
-                transform: rotate(135deg) scaleX(1.25);
-                translate: 25px 9.75px;
-            }
-        }
-
-        #arrow {
-            position: static;
-            display: block;
-        }
-
-        .menu {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            width: calc(100% - 40px);
-            height: calc(100% - 96px);
-            margin-top: 58px;
-            position: fixed;
-            left: 0;
-            top: 0;
-            opacity: 0;
-            padding: 20px;
-            gap: 24px;
-            transform: scaleY(0);
-            transition: all .4s cubic-bezier(1, 0, 0, 1);
-            transform-origin: center 0px;
-
-            li {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                font-size: 24px;
-                line-height: 30px;
-                opacity: 0.8;
-                transition: all .3s ease-in-out 0ms;
-            }
-
-            li:hover {
-                opacity: 1;
-            }
-        }
-    }
 }
