--- a/style/menu.css
+++ b/style/menu.css
@@ -53,6 +53,11 @@ header {
                 letter-spacing: 2px;
             }
         }
+
+        label {
+            transform: scaleX(1);
+            position: fixed;
+        }
     }
 }
 
@@ -71,6 +76,11 @@ header {
             position: fixed;
             display: none;
         }
+
+        label {
+            transform: scaleX(1);
+            position: fixed;
+        }
     }
 }
 
@@ -86,12 +96,19 @@ header {
     header {
         padding: 20px;
 
+        label {
+            transform: scaleX(1);
+            position: static;
+            z-index: 8;
+        }
+
         .menubutton {
             width: 18px;
             height: 18px;
             position: relative;
             display: block;
             overflow: visible;
+            z-index: 8;
 
             .top {
                 transition: all .3s ease-in-out;
@@ -125,22 +142,27 @@ header {
             display: block;
         }
 
+        svg {
+            z-index: 8;
+        }
+
         .menu {
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             width: calc(100% - 40px);
-            height: calc(100% - 96px);
-            margin-top: 58px;
+            height: calc(100% - 78px);
             position: fixed;
             left: 0;
             top: 0;
             opacity: 0;
-            padding: 20px;
+            padding: 58px 20px 20px 20px;
             gap: 24px;
             transform: scaleY(0);
             transition: all .4s cubic-bezier(1, 0, 0, 1);
             transform-origin: center 0px;
+            background-color: rgba(2, 4, 13, 0.75);
+            backdrop-filter: blur(26px);
 
             li {
                 display: flex;
