--- a/style/menu.css
+++ b/style/menu.css
@@ -2,19 +2,46 @@ header {
     display: flex;
     justify-content: space-between;
     position: sticky;
+    top: 0px;
+    left: 0px;
 
     .menu {
         display: flex;
-        width: 648px;
         justify-content: space-between;
         user-select: none;
 
-        li {
+        div {
             display: block;
             font-size: 13px;
             line-height: 18px;
-            color: #FFFFFF;
+            color: #ffffffcc;
+            transition: all .3s ease-in-out;
         }
+
+        div:hover {
+            display: block;
+            font-size: 13px;
+            line-height: 18px;
+            color: #ffffff;
+        }
+
+        /* .menuHoverBar {
+            height: 1px;
+            width: 24px;
+            border-radius: 2px;
+            position: fixed;
+            top: 42px;
+            left: 0px;
+            opacity: 1;
+            transition: all .3s ease-in-out;
+            background: linear-gradient(90deg, #3e47f0 0%, #5278f2bf 50%, #68abf740 100%);
+        }
+        
+        .about:hover+.menuHoverBar {
+            opacity: 1;
+            width: 64px;
+            left: 512px;
+        } */
     }
 }
 
@@ -35,6 +62,8 @@ header {
 @media (min-width: 900px) {
     header {
         padding: 20px 72px;
+        background-color: #00000880;
+        backdrop-filter: blur(25px);
 
         #arrow {
             position: fixed;
@@ -49,7 +78,7 @@ header {
         }
 
         .menu {
-            li {
+            div {
                 letter-spacing: 2px;
             }
         }
@@ -58,12 +87,23 @@ header {
             transform: scaleX(1);
             position: fixed;
         }
+
+        .menu {
+            width: 648px;
+            color: #ffffffcc;
+        }
+
+        .menuHoverBar {
+            display: block;
+        }
     }
 }
 
 @media (max-width: 900px) {
     header {
         padding: 20px;
+        background-color: #00000880;
+        backdrop-filter: blur(25px);
 
         #arrow {
             position: fixed;
@@ -81,6 +121,14 @@ header {
             transform: scaleX(1);
             position: fixed;
         }
+
+        .menu {
+            width: 512px;
+        }
+
+        .menuHoverBar {
+            display: block;
+        }
     }
 }
 
@@ -91,10 +139,24 @@ header {
         transition: all .8s cubic-bezier(1, 0, 0, 1) 0ms;
         transform-origin: center 0px;
         z-index: 6;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: calc(100% - 40px);
+        height: calc(100% - 78px);
+        position: fixed;
+        left: 0;
+        top: 0;
+        padding: 58px 20px 20px 20px;
+        gap: 24px;
+        background-color: rgba(2, 4, 13, 0.75);
+        backdrop-filter: blur(26px);
     }
 
     header {
         padding: 20px;
+        /* background-color: #00000880;
+        backdrop-filter: blur(25px); */
 
         label {
             transform: scaleX(1);
@@ -144,6 +206,10 @@ header {
 
         svg {
             z-index: 8;
+        }
+
+        .menuHoverBar {
+            display: none;
         }
 
         .menu {
