--- a/style/menu.css
+++ b/style/menu.css
@@ -4,13 +4,14 @@ header {
     position: sticky;
     top: 0px;
     left: 0px;
+    z-index: 6;
 
     .menu {
         display: flex;
         justify-content: space-between;
         user-select: none;
 
-        div {
+        .menuli {
             display: block;
             font-size: 13px;
             line-height: 18px;
@@ -18,12 +19,12 @@ header {
             transition: all .3s ease-in-out;
         }
 
-        div:hover {
-            display: block;
+        /* .menuli:hover {
+            display: flex;
             font-size: 13px;
             line-height: 18px;
             color: #ffffff;
-        }
+        } */
 
         /* .menuHoverBar {
             height: 1px;
@@ -35,9 +36,9 @@ header {
             opacity: 1;
             transition: all .3s ease-in-out;
             background: linear-gradient(90deg, #3e47f0 0%, #5278f2bf 50%, #68abf740 100%);
-        }
+        } */
         
-        .about:hover+.menuHoverBar {
+        /* .about:hover+.menuHoverBar {
             opacity: 1;
             width: 64px;
             left: 512px;
@@ -136,21 +137,6 @@ header {
     #toggler:checked~.menu {
         transform: scaleY(1);
         opacity: 1;
-        transition: all .8s cubic-bezier(1, 0, 0, 1) 0ms;
-        transform-origin: center 0px;
-        z-index: 6;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        width: calc(100% - 40px);
-        height: calc(100% - 78px);
-        position: fixed;
-        left: 0;
-        top: 0;
-        padding: 58px 20px 20px 20px;
-        gap: 24px;
-        background-color: rgba(2, 4, 13, 0.75);
-        backdrop-filter: blur(26px);
     }
 
     header {
@@ -217,7 +203,7 @@ header {
             flex-direction: column;
             justify-content: flex-start;
             width: calc(100% - 40px);
-            height: calc(100% - 78px);
+            height: calc(100vh - 78px);
             position: fixed;
             left: 0;
             top: 0;
@@ -230,7 +216,7 @@ header {
             background-color: rgba(2, 4, 13, 0.75);
             backdrop-filter: blur(26px);
 
-            li {
+            .menuli {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -240,7 +226,7 @@ header {
                 transition: all .3s ease-in-out 0ms;
             }
 
-            li:hover {
+            .menuli:hover {
                 opacity: 1;
             }
         }
