--- a/style/markdown.css
+++ b/style/markdown.css
@@ -19,6 +19,13 @@
         text-transform: uppercase;
         font-weight: normal;
     }
+
+    h2 {
+        border-bottom: solid 1px #ffffff5e;
+        line-height: 46px;
+        font-size: 26px;
+        letter-spacing: 2px;
+    }
     
     p {
         line-height: 26px;
