--- a/style/menu.css
+++ b/style/menu.css
@@ -1,7 +1,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     top: 0px;
     left: 0px;
     z-index: 6;
@@ -16,7 +16,11 @@ header {
             font-size: 13px;
             line-height: 18px;
             color: #ffffffcc;
-            transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out 0s;
+        }
+
+        .menuli:hover {
+            color: #ffffff;
         }
 
         /* .menuli:hover {
@@ -65,6 +69,7 @@ header {
         padding: 20px 72px;
         background-color: #00000880;
         backdrop-filter: blur(25px);
+        width: calc(100% - 144px);
 
         #arrow {
             position: fixed;
@@ -105,6 +110,7 @@ header {
         padding: 20px;
         background-color: #00000880;
         backdrop-filter: blur(25px);
+        width: calc(100% - 40px);
 
         #arrow {
             position: fixed;
@@ -141,6 +147,8 @@ header {
 
     header {
         padding: 20px;
+        width: calc(100% - 40px);
+        width: calc(100% - 40px);
         /* background-color: #00000880;
         backdrop-filter: blur(25px); */
 
