--- a/style/markdown.css
+++ b/style/markdown.css
@@ -1,16 +1,15 @@
 #mdBox {
     color: #ffffff;
+    border-radius: 18px;
+    margin: 20px;
+    padding: 25px 50px;
+    border: solid 1px #091030;
 
     h1 {
-        padding-top: 1em;
-        padding-bottom: 1em;
-        padding-left: 50px;
-        margin-left: -52px;
-        margin-right: -52px;
-        margin-top: 0;
-        margin-bottom: 0;
-        background-color: #091030;
-        border-radius: 10px;
+        border-bottom: solid 1px #091030;
+        line-height: 54px;
+        font-size: 34px;
+        letter-spacing: 2px;
     }
 
     h1,
@@ -21,18 +20,31 @@
     }
 
     h2 {
-        border-bottom: solid 1px #ffffff5e;
+        border-bottom: solid 1px #091030;
         line-height: 46px;
         font-size: 26px;
         letter-spacing: 2px;
     }
-    
+
     p {
         line-height: 26px;
         opacity: 0.9;
     }
 
-    ol, ul {
+    hr {
+        background-image: url(../sources/md_hr.svg);
+        border-color: unset;
+        border-style: unset;
+        border-width: 0px;
+        margin-block-start: 20px;
+        margin-block-end: 28px;
+        margin-inline-start: 0;
+        margin-inline-end: 0;
+        height: 8px;
+    }
+
+    ol,
+    ul {
         cursor: default;
 
         p {
