--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,10 @@
     }
 }
 
+h1 {
+    text-transform: uppercase;
+}
+
 @media (min-width: 900px) {
     #pagetitle {
         padding-top: 1em;
@@ -165,7 +169,7 @@
         }
 
         h1 {
-            font-size: 36px;
+            font-size: 32px;
             line-height: 48px;
             text-align: center;
             display: flex;
