--- a/style/main.css
+++ b/style/main.css
@@ -5,11 +5,37 @@
 
     p {
         margin: 0;
+        text-transform: capitalize;
+        color: var(--on-background)
     }
 }
 
 h1 {
     text-transform: uppercase;
+}
+
+#intro {
+    .img {
+        background-repeat: no-repeat;
+        background-position: center;
+        image-rendering: auto;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    #intro {
+        .img {
+            background-image: url(../sources/intro-dark.png);
+        }
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    #intro {
+        .img {
+            background-image: url(../sources/intro-light.png);
+        }
+    }
 }
 
 @media (min-width: 900px) {
@@ -18,7 +44,7 @@ h1 {
         padding-bottom: 1em;
         padding-left: 50px;
         padding-right: 50px;
-        background-color: #091030;
+        background-color: var(--primary-color-25);
         border-radius: 18px;
         margin: 20px;
         font-size: 48px;
@@ -32,11 +58,11 @@ h1 {
     }
 
     #mdBox {
-        color: #ffffff;
+        color: var(--on-background);
         border-radius: 18px;
         margin: 20px;
         padding: 25px 50px;
-        border: solid 1px #091030;
+        border: solid 1px var(--primary-color-50);
     }
 
     #intro {
@@ -45,8 +71,10 @@ h1 {
         align-items: center;
         justify-content: space-between;
 
-        img {
+        .img {
             height: 472px;
+            width: 352px;
+            background-size: auto 472px;
         }
 
         p {
@@ -62,10 +90,15 @@ h1 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        gap: 30px;
     }
 
     .brandBtn {
-        width: 25%;
+        width: calc(25% - 22.5px);
+    }
+
+    .brandBtn:hover {
+        width: calc(25% - 82.5px);
     }
 
     .logo {
@@ -90,7 +123,7 @@ h1 {
         padding-bottom: 1em;
         padding-left: 20px;
         padding-right: 20px;
-        background-color: #091030;
+        background-color: var(--primary-color-25);
         border-radius: 18px;
         margin: 8px;
         font-size: 48px;
@@ -104,11 +137,11 @@ h1 {
     }
 
     #mdBox {
-        color: #ffffff;
+        color: var(--on-background);
         border-radius: 18px;
         margin: 8px;
         padding: 10px 20px;
-        border: solid 1px #091030;
+        border: solid 1px var(--primary-color-50);
     }
 
     #intro {
@@ -117,8 +150,10 @@ h1 {
         align-items: center;
         justify-content: space-between;
 
-        img {
+        .img {
             height: 396px;
+            width: 295px;
+            background-size: auto 396px;
         }
 
         p {
@@ -134,10 +169,15 @@ h1 {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        gap: 30px;
     }
 
     .brandBtn {
-        width: 50%;
+        width: calc(50% - 15px);
+    }
+
+    .brandBtn:hover {
+        width: calc(50% - 75px);
     }
 
     .logo {
@@ -162,7 +202,7 @@ h1 {
         padding-bottom: 1em;
         padding-left: 20px;
         padding-right: 20px;
-        background-color: #091030;
+        background-color: var(--primary-color-25);
         border-radius: 18px;
         margin: 8px;
         font-size: 48px;
@@ -171,16 +211,16 @@ h1 {
             line-height: 26px;
             font-size: 16px;
             opacity: 0.9;
-            letter-spacing: 0.5px;
+            letter-spacing: 0px;
         }
     }
 
     #mdBox {
-        color: #ffffff;
+        color: var(--on-background);
         border-radius: 18px;
         margin: 8px;
         padding: 10px 20px;
-        border: solid 1px #091030;
+        border: solid 1px var(--primary-color-25);
     }
 
     #intro {
@@ -188,12 +228,14 @@ h1 {
         flex-direction: column-reverse;
         align-items: center;
 
-        img {
+        .img {
             height: 396px;
+            width: 295px;
+            background-size: auto 396px;
         }
 
         h1 {
-            font-size: 32px;
+            font-size: 36px;
             line-height: 48px;
             text-align: center;
             display: flex;
@@ -223,10 +265,15 @@ h1 {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        gap: 10px;
     }
 
     .brandBtn {
-        width: 100%;
+        width: calc(100% - 0px);
+    }
+
+    .brandBtn:hover {
+        width: calc(100% - 60px);
     }
 }
 
@@ -235,7 +282,7 @@ h1 {
     font-weight: normal;
     letter-spacing: 4px;
     line-height: 52px;
-    color: #FFFFFF;
+    color: var(--on-background);
     text-align: left;
     vertical-align: top;
 }
@@ -249,7 +296,7 @@ h1 {
         letter-spacing: -0.5px;
         line-height: 24px;
         max-width: 410px;
-        color: #ffffffbf;
+        color: var(--on-background);
         vertical-align: top;
     }
 
@@ -258,7 +305,7 @@ h1 {
         font-weight: normal;
         letter-spacing: 0px;
         line-height: 52px;
-        color: #FFFFFF;
+        color: var(--on-background);
         text-align: left;
         vertical-align: top;
     }
@@ -268,20 +315,84 @@ h1 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 15px 0px;
+    padding: 30px 0px;
     gap: 32px;
+    background-color: var(--default-background);
+    border-radius: 16px;
+    transition: all .3s ease-in-out;
 
     p {
         font-size: 24px;
-        color: #ffffff;
+        color: var(--on-background);
         opacity: 0.75;
         transition: all .15s ease-in;
         z-index: 2;
+        margin: 0;
     }
 }
 
 .brandBtn:hover {
+    background-color: var(--main-background);
+    border-radius: 16px;
+    padding: 30px 30px;
+
     p {
         opacity: 1;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .brandBtn {
+        svg {
+            transition: all .15s ease-in;
+
+            #brand-darker {
+                fill: var(--on-background-hover);
+            }
+
+            #brand-lighter {
+                fill: var(--darker-color);
+            }
+        }
+    }
+
+    .brandBtn:hover {
+        svg {
+            #brand-darker {
+                fill: var(--on-background);
+            }
+
+            #brand-lighter {
+                fill: var(--primary-color);
+            }
+        }
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .brandBtn {
+        svg {
+            transition: all .15s ease-in;
+
+            #brand-darker {
+                fill: var(--on-background-hover);
+            }
+
+            #brand-lighter {
+                fill: var(--lighter-color);
+            }
+        }
+    }
+
+    .brandBtn:hover {
+        svg {
+            #brand-darker {
+                fill: var(--on-background);
+            }
+
+            #brand-lighter {
+                fill: var(--secondary-color);
+            }
+        }
     }
 }
