--- a/style/markdown.css
+++ b/style/markdown.css
@@ -1,6 +1,6 @@
 #mdBox {
     h1 {
-        border-bottom: solid 1px #091030;
+        border-bottom: solid 1px var(--primary-color-50);
         line-height: 54px;
         font-size: 34px;
         letter-spacing: 2px;
@@ -14,7 +14,7 @@
     }
 
     h2 {
-        border-bottom: solid 1px #091030;
+        border-bottom: solid 1px var(--primary-color-50);
         line-height: 46px;
         font-size: 26px;
         letter-spacing: 2px;
@@ -23,6 +23,7 @@
     p {
         line-height: 26px;
         opacity: 0.9;
+        color: var(--on-background);
     }
 
     hr {
@@ -42,7 +43,7 @@
         cursor: default;
 
         p {
-            color: #ffffff;
+            color: var(--on-background);
             line-height: normal;
             display: list-item;
             margin: .7em;
