--- a/style/notfound.css
+++ b/style/notfound.css
@@ -2,9 +2,9 @@
     #notfoundIndex {
         height: calc(100vh - 172px);
         display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
 
         h8 {
             font-size: 128px;
@@ -14,11 +14,11 @@
             font-weight: 100;
             font-variant-ligatures: none;
             margin-left: -25px;
-            color: #ffffffbd;
+            color: var(--on-background)bd;
         }
 
         h8::selection {
-            color: #FFFFFF;
+            color: var(--on-background);
             font-weight: 150;
         }
 
@@ -27,21 +27,13 @@
             align-items: center;
             gap: 6px;
             max-width: none;
+        }
 
-            span {
-                background-color: #091030;
-                color: #FFFFFF;
-                padding: 2px 6px;
-                border-radius: 6px;
-                font-family: "JetBrains Mono", monospace;
-                font-size: 14px;
-            }
-
-            span::selection {
-                color: rgb(104, 171, 247);
-                font-weight: 500;
-                box-shadow: rgba(104, 171, 247, 0.1) 1px 4px 18px;
-            }
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 10px;
         }
     }
 }
@@ -61,11 +53,11 @@
             font-family: "JetBrains Mono", monospace;
             font-weight: 100;
             font-variant-ligatures: none;
-            color: #ffffffbd;
+            color: var(--on-background)bd;
         }
 
         h8::selection {
-            color: #FFFFFF;
+            color: var(--on-background);
             font-weight: 150;
         }
 
@@ -74,21 +66,13 @@
             align-items: center;
             gap: 6px;
             max-width: none;
+        }
 
-            span {
-                background-color: #091030;
-                color: #FFFFFF;
-                padding: 2px 6px;
-                border-radius: 6px;
-                font-family: "JetBrains Mono", monospace;
-                font-size: 14px;
-            }
-
-            span::selection {
-                color: rgb(104, 171, 247);
-                font-weight: 500;
-                box-shadow: rgba(104, 171, 247, 0.1) 1px 4px 18px;
-            }
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
         }
     }
 }
@@ -109,13 +93,13 @@
             font-weight: 100;
             font-variant-ligatures: none;
             margin-left: 0px;
-            color: #ffffffbd;
+            color: var(--on-background)bd;
             width: 100%;
             display: block;
         }
 
         h8::selection {
-            color: #FFFFFF;
+            color: var(--on-background);
             font-weight: 150;
         }
 
@@ -129,21 +113,37 @@
             gap: 6px;
             max-width: none;
             flex-direction: column;
+        }
 
-            span {
-                background-color: #091030;
-                color: #FFFFFF;
-                padding: 2px 6px;
-                border-radius: 6px;
-                font-family: "JetBrains Mono", monospace;
-                font-size: 14px;
-            }
+        div {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+    }
+}
 
-            span::selection {
-                color: rgb(104, 171, 247);
-                font-weight: 500;
-                box-shadow: rgba(104, 171, 247, 0.1) 1px 4px 18px;
-            }
+#notfoundIndex {
+    div {
+        h2 {
+            margin: 0;
+        }
+    }
+
+    p {
+        span {
+            background-color: var(--default-background);
+            color: var(--on-background);
+            padding: 2px 6px;
+            border-radius: 6px;
+            font-family: "JetBrains Mono", monospace;
+            font-size: 14px;
+        }
+
+        span::selection {
+            color: var(--primary-color);
+            font-weight: 500;
         }
     }
 }
