--- a/style/univar.css
+++ b/style/univar.css
@@ -1,7 +1,9 @@
-@font-face {
+/* @font-face {
     font-family: varsans-reg;
     src: url(../fonts/VARIATIONSans-Regular.ttf);
-}
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Wix+Madefor+Display:wght@400..800&display=swap');
 
 :root {
     --primary-color: #4B6BEB;
@@ -42,7 +44,7 @@
 }
 
 body {
-    font-family: varsans-reg;
+    /* font-family: varsans-reg; */
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -55,28 +57,47 @@ p {
     overflow: visible;
 }
 
+h1, h2, h3 {
+    font-family: "Wix Madefor Display", sans-serif;
+}
+
 p {
     color: var(--on-background);
+    font-family: "Inter Tight", sans-serif;
+    letter-spacing: 0.75px;
+    font-size: 16px;
 }
 
 @media (prefers-color-scheme: light) {
     h1::selection, h2::selection, h3::selection {
-        color: var(--darker-color);
+        background-color: var(--darker-color);
+        color: var(--menu-background);
+        font-weight: 400;
+        border-radius: 2px;
     }
 
     p::selection {
-        color: var(--primary-color);
+        background-color: var(--primary-color);
+        color: var(--menu-background);
+        font-weight: 400;
+        border-radius: 2px;
 
     }
 }
 
 @media (prefers-color-scheme: dark) {
     h1::selection, h2::selection, h3::selection {
-        color: var(--lighter-color);
+        background-color: var(--lighter-color);
+        color: var(--menu-background);
+        font-weight: 400;
+        border-radius: 2px;
     }
 
     p::selection {
-        color: var(--secondary-color);
+        background-color: var(--secondary-color);
+        color: var(--menu-background);
+        font-weight: 400;
+        border-radius: 2px;
 
     }
 }
